Opdated model fro GIB and some UI-changes. Change to configuration

--- a/scripts/match/bidding/159/default159.conf
+++ b/scripts/match/bidding/159/default159.conf
@@ -87,6 +87,9 @@ pimc_trust_NN = 0.01
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
