--- a/scripts/training/bidding/default.conf
+++ b/scripts/training/bidding/default.conf
@@ -19,7 +19,7 @@ contract = models/contract/contract-193200
 
 [bidding]
 bidder = scripts/training/bidding/model/bidding_V2-5540000
-info = scripts/training/bidding_info/model/binfo_V2-2440000
+info = scripts/training/bidding/model/binfo_V2-5254000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -94,6 +94,9 @@ claim = False
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 lead_accept_threshold = 0.01
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding
 bidding_threshold_sampling = 0.25
 # Filter to remove hands, where the play is inconsistent with the sample
