--- a/src/config/GIB-2024.04.24.conf
+++ b/src/config/GIB-2024.04.24.conf
@@ -21,14 +21,14 @@ contract = models/contract/contract-193200
 
 [bidding]
 bidder = UCBC 2024/Models/bidding_V2-5540000
-info = UCBC 2024/Models/binfo_V2-2340000
+info = UCBC 2024/Models/binfo_V2-5254000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
-# Use bidding quality in evaluation (if not good just use neaural network)
+# Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
@@ -134,6 +134,9 @@ pimc_trust_NN = 0.01
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
