--- a/src/config/PIMC.conf
+++ b/src/config/PIMC.conf
@@ -27,7 +27,7 @@ search_threshold = 0.07
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
-# Use bidding quality in evaluation (if not good just use neaural network)
+# Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = False
 # Upvote the samples that matches the bidding best
 use_probability = False
@@ -109,6 +109,9 @@ pimc_trust_NN = 0.01
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 #use_distance = False
 #bidding_threshold_sampling = 0.25
