--- a/.gitignore
+++ b/.gitignore
@@ -56,41 +56,29 @@ src/hfmodels
 src/**/*.bak
 src/**/*.dir
 src/**/*.dat
-scripts/training/data/match14 - 1.pbn
 scripts/training/**/*BEN99*
 
 scripts/training/data/*BBA*.zip
-scripts/training/data/BBA*.ben
 scripts/training/bidding/stats*.txt
 scripts/training/data/5 mill deals with bidding.zip
-scripts/training/data/5 mill deals with bidding.ben
 fly.io
 scripts/training/bidding/auctions.txt
-scripts/training/data/2023.12.29-input.bba
-scripts/training/data/Camrose24_1.pbn
 UCBC 2024/2024 Practice
-scripts/training/data/BEN-WBridge5.ben
-scripts/training/data/WBridge5-BEN.ben
 UCBC 2024/Boards/input.bba
 scripts/training/data/BBA*.txt
 UCBC 2024/Boards/BBA/Random 100.000-rotated.pbn
 scripts/training/data/WBC/play_ben.zip
 scripts/training/data/WBC/play_jackformat.zip
-scripts/training/data/input-2024.02.12.bba
 scripts/training/data/input-2024.02.12.txt
-UCBC 2024/Boards/input-2024-02-20.bba
-scripts/training/data/BBA SAYC vs SAYC - 20.02.2024 02.52.pbn
-scripts/training/data/BEN 21GF vs GIB - 20.02.2024.pbn
-scripts/training/data/BEN SAYC vs ACOL.pbn
-scripts/training/data/input-2024-02-20.bba
-scripts/training/data/SAYC-Version 7918.ben
-scripts/training/data/SAYC-Version 7918.pbn
-scripts/training/data/SAYC 7933 2024-03-06.ben
-UCBC 2024/Boards/input-2024-03-15.bba
+UCBC 2024/Boards/*.bba
 UCBC 2024/Boards/BBA/TMPbn2Cleaner.exe
 scripts/training/data/WBC/play.txt
 scripts/match/bidding/default
-UCBC 2024/MvsM/models/1 Mill SAYC.ben
-scripts/training/bidding/1 Mill SAYC.ben
-scripts/training/data/GIB-Thorvald.ben
-scripts/training/data/BEN-UCBC.ben
+scripts/training/data/*.bba
+scripts/training/data/*.pbn
+scripts/training/data/*.ben
+UCBC 2024/MvsM/models/*.ben
+gamedb*
+install/**/*.bak
+install/**/*.dir
+install/**/*.dat
