--- a/scripts/training/bidding_info/default.conf
+++ b/scripts/training/bidding_info/default.conf
@@ -44,6 +44,9 @@ claim = False
 
 [sampling]
 lead_accept_threshold = 0.01
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 bidding_threshold_sampling = 0.75
 play_accept_threshold = 0.03
 bid_accept_play_threshold = 0.05
