--- a/src/config/GIB.conf
+++ b/src/config/GIB.conf
@@ -26,7 +26,7 @@ search_threshold = 0.10
 no_search_threshold = 1
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 99
-# Use bidding quality in evaluation (if not good just use neaural network)
+# Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = False
 # Upvote the samples that matches the bidding best
 use_probability = False
@@ -129,6 +129,9 @@ pimc_trust_NN = 0.01
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.1
+# If we play with our normal partner we can add som trust to the lead
+# Setting it to high will reduce the samples and thus getting bad samples
+lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
 use_distance = False
 bidding_threshold_sampling = 0.10
