--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -21,8 +21,8 @@ matchpoint = True
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/bidding_V2-5540000
-info = UCBC 2024/Models/binfo_V2-5254000
+bidder = models/archive/gib21/bidding_V2-5540000
+info = models/archive/gib21_info/binfo_V2-5254000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
