Model an configuration clean up

--- a/src/config/GIB-2024.04.24.conf
+++ b/src/config/GIB-2024.04.24.conf
@@ -1,13 +1,14 @@
 [models]
 name = GIB
+api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 0
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = 1
-EW = 99
+NS = -1
+EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
@@ -20,8 +21,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/bidding_V2-5540000
-info = UCBC 2024/Models/binfo_V2-5254000
+bidder = models/archive/gib21/bidding_V2-5540000
+info = models/archive/gib21_info/binfo_V2-5254000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
