--- a/UCBC 2024/MvsM/default.conf
+++ b/UCBC 2024/MvsM/default.conf
@@ -1,14 +1,15 @@
 [models]
 # BEN NS and EW
 name = default
+api = true
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 0
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = 1
-EW = 99
+NS = -1
+EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
@@ -21,8 +22,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/MvsM/Models/bidding-3125000
-info = UCBC 2024/MvsM/Models/binfo-3125000
+bidder = UCBC 2024/MvsM/Models/bidding_V2-8268000
+info = UCBC 2024/MvsM/Models/binfo_V2-5254000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -86,13 +87,13 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-dummy_nt = UCBC 2024/Models/dummy_nt-475000
+dummy_nt = UCBC 2024/Models/decl_nt-950000
 righty_nt = UCBC 2024/Models/jack/righty-1000000
-decl_nt = UCBC 2024/Models/decl_nt-9500000
+decl_nt = UCBC 2024/Models/decl_nt-950000
 lefty_suit = UCBC 2024/Models/jack/lefty-1000000
-dummy_suit = UCBC 2024/Models/dummy_suit-999000
+dummy_suit = UCBC 2024/Models/decl_suit-1278000
 righty_suit = UCBC 2024/Models/jack/righty-1000000
-decl_suit = UCBC 2024/Models/decl_suit-12780000
+decl_suit = UCBC 2024/Models/decl_suit-1278000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
