--- a/src/config/PIMC.conf
+++ b/src/config/PIMC.conf
@@ -1,9 +1,9 @@
 [models]
 name = PIMC
-
+api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 1
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
@@ -19,8 +19,8 @@ bba_ew = 1
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/NS1EW99-bidding_same-5556000
-info = UCBC 2024/Models/NS1EW99-binfo_same-5556000
+bidder = UCBC 2024/Models/NS1EW99-bidding_V2-3125000
+info = UCBC 2024/Models/NS1EW99-binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
