--- a/src/config/PIMC.conf
+++ b/src/config/PIMC.conf
@@ -84,8 +84,8 @@ use_biddingquality_in_eval = True
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
-pimc_use_declaring = False
-pimc_use_defending = False
+pimc_use_declaring = True
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
@@ -103,7 +103,7 @@ pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.01
+pimc_trust_NN = 0.0
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
