--- a/UCBC 2024/MvsM/default.conf
+++ b/UCBC 2024/MvsM/default.conf
@@ -85,14 +85,14 @@ double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
-opening_lead_included = False
-lefty_nt = UCBC 2024/Models/jack/lefty-1000000
+opening_lead_included = True
+lefty_nt = UCBC 2024/Models/lefty_nt-475000
 dummy_nt = UCBC 2024/Models/decl_nt-475000
-righty_nt = UCBC 2024/Models/jack/righty-1000000
+righty_nt = UCBC 2024/Models/righty_nt-475000
 decl_nt = UCBC 2024/Models/decl_nt-475000
-lefty_suit = UCBC 2024/Models/jack/lefty-1000000
+lefty_suit = UCBC 2024/Models/lefty_suit-999000
 dummy_suit = UCBC 2024/Models/decl_suit-999000
-righty_suit = UCBC 2024/Models/jack/righty-1000000
+righty_suit = UCBC 2024/Models/righty_suit-999000
 decl_suit = UCBC 2024/Models/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
@@ -146,7 +146,7 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.20
+bid_accept_play_threshold = 0.10
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
