--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -151,6 +151,7 @@ bid_accept_play_threshold = 0.10
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
+min_play_accept_threshold_samples = 20
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
