--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ install/**/*.dat
 install/dist/table_manager_client.zip
 scripts/training/bidding/sampling_1000.prt
 scripts/training/bidding/html/*.html
+src/frontend/api.json
