--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -30,6 +30,8 @@ no_search_threshold = 0.999
 eval_after_bid_count = 12
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
 
 [adjustments]
 # Are adjustments enabled
@@ -104,6 +106,8 @@ claim = True
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -164,3 +168,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.001
