--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -15,7 +15,7 @@ use_bba = False
 bba_ns = -1
 bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
-matchpoint = True
+matchpoint = False
 
 [contract]
 contract = models/contract/contract-193200
@@ -33,6 +33,9 @@ eval_after_bid_count = 12
 use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
+
 
 [adjustments]
 # Are adjustments enabled
