--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ src/frontend/api.json
 src/CBE*.*
 src/GIB.*
 UCBC 2024/Boards/Thorvald/random.pbn
+UCBC 2024/Boards/Thorvald/BBA - 25.05.2024 14.08.ben
