--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -1,5 +1,5 @@
 [models]
-name = SAYC UCBC
+name = SAYC UCBC vs WBridge5
 api = False
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
@@ -7,13 +7,13 @@ model_version = 2
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = -1
-EW = -1
+NS = 1
+EW = 99
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+bba_ns = -1
+bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -21,8 +21,8 @@ matchpoint = False
 contract = UCBC 2024/Models/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/bidding_V2-5158000
-info = UCBC 2024/Models/binfo_V2-5158000
+bidder = UCBC 2024/Models/NS1EW99-bidding_V2-3125000
+info = UCBC 2024/Models/NS1EW99-binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -33,6 +33,8 @@ eval_after_bid_count = 12
 use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
 
 [adjustments]
 # Are adjustments enabled
@@ -107,6 +109,8 @@ claim = False
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -168,3 +172,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.001
