--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -5,14 +5,14 @@ name = default
 model_version = 2
 # Version of tensorflow to use
 tf_version = 1
-# NS is SAYC and EW is WBridge5 with SAYC
+# NS and EW play the same system
 NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+bba_ns = -1
+bba_ew = -1
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -20,8 +20,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/bidding_V2-5158000
-info = UCBC 2024/Models/binfo_V2-5158000
+bidder = models/GIB/bidding_V2-3125000
+info = models/GIB/binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -30,6 +30,8 @@ no_search_threshold = 0.999
 eval_after_bid_count = 12
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# Upvote the samples that matches the bidding best
+use_probability = False
 # Before the final pass validate the contract with a neural network
 check_final_contract = False
 
@@ -68,10 +70,10 @@ lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
-min_opening_leads = 3
+min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = random
-lead_from_pips_suit = random
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
