--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -21,8 +21,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = models/GIB/bidding_V2-5076000
-info = models/archive/gib21_info/binfo_V2-5254000
+bidder = models/GIB/bidding_V2-3125000
+info = models/GIB/binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -35,7 +35,6 @@ use_biddingquality = True
 use_probability = False
 # Before the final pass validate the contract with a neural network
 check_final_contract = False
-
 
 [adjustments]
 # Are adjustments enabled
@@ -110,6 +109,8 @@ claim = True
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -118,7 +119,7 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 1
+pimc_start_trick_declarer = 4
 pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
@@ -170,3 +171,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.001
