--- a/UCBC 2024/Conf/UCBC2024.conf
+++ b/UCBC 2024/Conf/UCBC2024.conf
@@ -6,20 +6,22 @@ model_version = 2
 # Version of tensorflow to use
 tf_version = 1
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = -1
-EW = -1
+NS = 1
+EW = 99
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+bba_ns = -1
+bba_ew = -1
+# Playing matchpoint? Otherwise it is teams
+matchpoint = False
 
 [contract]
 contract = Models/contract-193200
 
 [bidding]
-bidder = Models/bidding_V2-5158000
-info = Models/binfo_V2-5158000
+bidder = Models/NS1EW99-bidding_V2-3125000
+info = Models/NS1EW99-binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids. -1 will just take highest
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -30,6 +32,8 @@ eval_after_bid_count = 12
 use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
 
 [adjustments]
 # Are adjustments enabled
@@ -104,6 +108,8 @@ claim = True
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -164,3 +170,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.001
