--- a/src/config/SAYC.conf
+++ b/src/config/SAYC.conf
@@ -3,16 +3,26 @@ name = SAYC
 
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 0
+model_version = 2
 # Version of tensorflow to use
 tf_version = 1
+# NS and EW play the same system
+NS = -1
+EW = -1
+# If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
+use_bba = False
+# Use SAYC in BBA
+bba_ns = -1
+bba_ew = -1
+# Playing matchpoint? Otherwise it is teams
+matchpoint = False
 
 [contract]
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = models/archive/sayc/bidding-1494000
-info = models/archive/sayc_info/binfo-1494000
+bidder = models/SAYC/bidding_V2-5158000
+info = models/SAYC/binfo_V2-5158000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -20,9 +30,11 @@ no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
 # Use bidding quality in evaluation (if not good just use neural network)
-use_biddingquality = False
+use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
 
 [adjustments]
 # Are adjustments enabled
@@ -50,16 +62,19 @@ adjust_min2_by = 200
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = models/lead_model_b/lead-1000000
-lead_nt = models/lead_model_b/lead-1000000
+lead_suit = UCBC 2024/Models/lead_suit-999000
+lead_nt = UCBC 2024/Models/lead_nt-475000
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
-double_dummy = False
+double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
-min_opening_leads = 1
+min_opening_leads = 4
+# Opening lead agreement (random, attitude, 135 or 24)
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -67,9 +82,9 @@ lead_single_dummy = models/lr3_model/lr3-1000000
 # Model for finding single dummy estimates without opening lead
 no_lead_single_dummy = models/single_dummy/single_dummy-32768000
 # Include opening lead, when making single dummy estimates
-lead_included = True
+lead_included = False
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = False
+double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
@@ -87,23 +102,25 @@ sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
 min_sample_hands_play = 5
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 1000
+sample_boards_for_play = 5000
 # Should possible claim be calculated
 claim = True
 # Use bidding info during play
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
-use_biddingquality_in_eval = False
+use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
-pimc_use_declaring = False
-pimc_use_defending = False
+pimc_use_declaring = True
+pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 1
-pimc_start_trick_defender = 1
+pimc_start_trick_declarer = 4
+pimc_start_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -154,3 +171,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.001
