Update of configuration file

--- a/UCBC 2024/MvsM/GIB.conf
+++ b/UCBC 2024/MvsM/GIB.conf
@@ -98,8 +98,8 @@ righty_suit = UCBC 2024/Models/righty_suit-999000
 decl_suit = UCBC 2024/Models/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
-# Minimum number of boards we want returned for sampling
-min_sample_hands_play = 5
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
