--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -34,8 +34,8 @@ righty_suit = models/righty.h5
 decl_suit = models/decl.h5
 # Number of samples when playing the hand
 sample_hands_play = 100
-# Minimum number of boards we want returned for sampling
-min_sample_hands_play = 5
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
