--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -83,8 +83,8 @@ righty_suit = models/TF2 models/righty.h5
 decl_suit = models/TF2 models/decl.h5
 # Number of samples when playing the hand
 sample_hands_play = 200
-# Minimum number of boards we want returned for sampling
-min_sample_hands_play = 5
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
