--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -98,8 +98,8 @@ righty_suit = models/playing/righty_suit-999000
 decl_suit = models/playing/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
-# Minimum number of boards we want returned for sampling
-min_sample_hands_play = 5
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
