--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -99,8 +99,8 @@ righty_suit = models/playing/righty_suit-999000
 decl_suit = models/playing/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
-# Minimum number of boards we want returned for sampling
-min_sample_hands_play = 5
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -119,8 +119,8 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 4
-pimc_start_trick_defender = 8
+pimc_start_trick_declarer = 3
+pimc_start_trick_defender = 6
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
