Implemented check final contract

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -34,7 +34,7 @@ use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
 # Before the final pass validate the contract with a neural network
-check_final_contract = False
+check_final_contract = True
 
 [adjustments]
 # Are adjustments enabled
@@ -172,4 +172,4 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.001
+exclude_samples = 0.07
