Added configuration for Rescue bidding

--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -29,12 +29,20 @@ search_threshold = 0.07
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
 # Upvote the samples that matches the bidding best
 use_probability = False
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
 
 [adjustments]
 # Are adjustments enabled
@@ -43,7 +51,7 @@ use_adjustment = True
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
-adjust_NN_Few_Samples = 500
+adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
