Alert and explanations

--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -34,6 +34,8 @@ use_biddingquality = True
 use_probability = False
 # Before the final pass validate the contract with a neural network
 check_final_contract = False
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
