--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -11,9 +11,9 @@ NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-# Use SAYC in BBA
-bba_ns = -1
-bba_ew = -1
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -22,6 +22,7 @@ contract = models/contract/contract-193200
 
 [bidding]
 bidder = models/GIB/bidding_V2-3125000
+#bidder = scripts/training/bidding/model/bidding_V2-177000
 info = models/GIB/binfo_V2-3125000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
@@ -43,6 +44,8 @@ max_samples_checked = 20
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
