Updated table manager client, and configurations

--- a/UCBC 2024/MvsM/Lia.conf
+++ b/UCBC 2024/MvsM/Lia.conf
@@ -1,6 +1,6 @@
 [models]
 # BEN NS
-name = Lia
+name = Lia (SAYC)
 api = true
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
@@ -30,8 +30,22 @@ search_threshold = 0.07
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
 eval_after_bid_count = 12
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# Upvote the samples that matches the bidding best - used when double dumme
+use_probability = True
+# Before the final pass validate the contract with a neural network
+check_final_contract = True
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
@@ -40,7 +54,7 @@ use_adjustment = True
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
-adjust_NN_Few_Samples = 500
+adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
@@ -68,7 +82,7 @@ lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
-min_opening_leads = 3
+min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
 lead_from_pips_nt = random
 lead_from_pips_suit = random
@@ -97,7 +111,7 @@ decl_suit = UCBC 2024/Models/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -106,6 +120,8 @@ claim = True
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = False
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -146,7 +162,7 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.10
+bid_accept_play_threshold = 0.07
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
@@ -157,7 +173,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
@@ -166,3 +182,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.07
