--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -34,8 +34,8 @@ eval_after_bid_count = 12
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
-# Upvote the samples that matches the bidding best
-use_probability = False
+# Upvote the samples that matches the bidding best - used when double dumme
+use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
 # How many samples checked
@@ -121,7 +121,7 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
-use_suitc = False
+use_suitc = True
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
