--- a/src/config/speed.conf
+++ b/src/config/speed.conf
@@ -1,5 +1,5 @@
 [models]
-name = default
+name = Speedy
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
