--- a/UCBC 2024/MvsM/jackos.conf
+++ b/UCBC 2024/MvsM/jackos.conf
@@ -1,8 +1,7 @@
 [models]
-# BEN EW
-name = Shark (SAYC)
+# BEN NS and EW
+name = jackos
 api = true
-
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
@@ -23,8 +22,8 @@ matchpoint = False
 contract = UCBC 2024/MvsM/Models/contract-193200
 
 [bidding]
-bidder = UCBC 2024/MvsM/Models/bidding_V2-5158000
-info = UCBC 2024/MvsM/Models/binfo_V2-5158000
+bidder = models/muppet/bidding_V2-1100000
+info = models/muppet/binfo_V2-1128000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -85,8 +84,8 @@ double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
 min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = random
-lead_from_pips_suit = random
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -116,7 +115,7 @@ min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
-claim = True
+claim = False
 # Use bidding info during play
 use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
@@ -137,7 +136,7 @@ pimc_start_trick_defender = 8
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
-pimc_constraints_each_trick = True
+pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
 pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
