--- a/src/config/BigBen.conf
+++ b/src/config/BigBen.conf
@@ -1,4 +1,5 @@
 [models]
+name = BigBen
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 1
