--- a/src/config/SAYC PIMC.conf
+++ b/src/config/SAYC PIMC.conf
@@ -1,6 +1,5 @@
 [models]
-name = SAYC
-
+name = SAYC PIMC
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 0
