Implementation of SuitC and update of rescue bids

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ src/CBE*.*
 src/GIB.*
 UCBC 2024/Boards/Thorvald/random.pbn
 UCBC 2024/Boards/Thorvald/BBA - 25.05.2024 14.08.ben
+UCBC 2024/Boards/Thorvald/issues.bba
+src/SuitC.pbn
+src/Suic.Pbn
