--- a/UCBC 2024/MvsM/jackos.conf
+++ b/UCBC 2024/MvsM/jackos.conf
@@ -25,11 +25,11 @@ contract = UCBC 2024/MvsM/Models/contract-193200
 bidder = models/muppet/bidding_V2-1100000
 info = models/muppet/binfo_V2-1128000
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+search_threshold = 0.001
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.999
+no_search_threshold = 0.95
 # Evaluate 2 bids if auction longer than this
-eval_after_bid_count = 12
+eval_after_bid_count = 6
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -49,7 +49,7 @@ alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
-use_adjustment = True
+use_adjustment = False
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
