--- a/src/config/SAYC PIMC.conf
+++ b/src/config/SAYC PIMC.conf
@@ -17,11 +17,26 @@ search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate 2 bids if auction longer than this
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
+# Disabling simulation for opening bid
+eval_opening_bid = False
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
-use_biddingquality = False
-# Upvote the samples that matches the bidding best
-use_probability = False
+use_biddingquality = True
+# Upvote the samples that matches the bidding best - used when double dumme
+use_probability = True
+# Before the final pass validate the contract with a neural network
+check_final_contract = True
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = False
 
 [lead]
 # Neural network for suggesting opening lead
