--- a/UCBC 2024/MvsM/SAYC.conf
+++ b/UCBC 2024/MvsM/SAYC.conf
@@ -28,8 +28,10 @@ info = UCBC 2024/MvsM/Models/binfo_V2-5158000
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
-# Evaluate 2 bids if auction longer than this
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
+# Disabling simulation for opening bid
+eval_opening_bid = False
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
