--- a/src/config/GIB.conf
+++ b/src/config/GIB.conf
@@ -1,5 +1,5 @@
 [models]
-name = GIB
+name = GIB (Old version)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 0
@@ -24,12 +24,26 @@ info = models/archive/21gf_info/binfo_21gf-500000
 search_threshold = 0.10
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
-# Evaluate 2 bids if auction longer than this
-eval_after_bid_count = 99
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
+eval_after_bid_count = -1
+# Disabling simulation for opening bid
+eval_opening_bid = False
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = False
-# Upvote the samples that matches the bidding best
+# Upvote the samples that matches the bidding best - used when double dumme
 use_probability = False
+# Before the final pass validate the contract with a neural network
+check_final_contract = False
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
