--- a/src/config/SAYC.conf
+++ b/src/config/SAYC.conf
@@ -27,14 +27,26 @@ info = models/SAYC/binfo_V2-5158000
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
-# Evaluate 2 bids if auction longer than this
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
+# Disabling simulation for opening bid
+eval_opening_bid = False
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
-# Upvote the samples that matches the bidding best
-use_probability = False
+# Upvote the samples that matches the bidding best - used when double dumme
+use_probability = True
 # Before the final pass validate the contract with a neural network
-check_final_contract = False
+check_final_contract = True
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
