--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -28,8 +28,10 @@ info = models/GIB/binfo_V2-3125000
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
-# Evaluate 2 bids if auction longer than this
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
+# Disabling simulation for opening bid
+eval_opening_bid = False
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
