Added new parameters. Some minor improvements

--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,4 @@ UCBC 2024/Boards/Thorvald/BBA - 25.05.2024 14.08.ben
 UCBC 2024/Boards/Thorvald/issues.bba
 src/SuitC.pbn
 src/Suic.Pbn
-src/v0.8.0
+src/v0.8.0*
