--- a/UCBC 2024/MvsM/SAYC.conf
+++ b/UCBC 2024/MvsM/SAYC.conf
@@ -1,13 +1,13 @@
 [models]
 # BEN NS and EW
 name = SAYC
-api = true
+api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
 # Version of tensorflow to use
 tf_version = 1
-# NS is SAYC and EW is WBridge5 with SAYC
+# NS and EW play the same system
 NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
@@ -30,7 +30,7 @@ search_threshold = 0.07
 no_search_threshold = 0.999
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
-# Disabling simulation for opening bid
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
@@ -123,7 +123,12 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
-use_suitc = False
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -147,6 +152,8 @@ pimc_max_threads = -1
 pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = False
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
