--- a/UCBC 2024/MvsM/GIB.conf
+++ b/UCBC 2024/MvsM/GIB.conf
@@ -1,5 +1,5 @@
 [models]
-# BEN NS
+# BEN NS and EW
 name = GIB 2/1
 api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
@@ -27,15 +27,19 @@ info = models/GIB/binfo_V2-3130000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.999
+no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
-# Disabling simulation for opening bid
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dumme
 use_probability = True
 # Before the final pass validate the contract with a neural network
@@ -47,7 +51,7 @@ min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
@@ -123,7 +127,12 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
-use_suitc = False
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -138,7 +147,7 @@ pimc_start_trick_defender = 8
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
-pimc_constraints_each_trick = False
+pimc_constraints_each_trick = True
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
 pimc_max_playouts = 10000
 # Max number of threads PIMC is allowed to use
@@ -147,6 +156,8 @@ pimc_max_threads = -1
 pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
