--- a/UCBC 2024/MvsM/jackos.conf
+++ b/UCBC 2024/MvsM/jackos.conf
@@ -7,7 +7,7 @@ api = true
 model_version = 2
 # Version of tensorflow to use
 tf_version = 1
-# NS is SAYC and EW is WBridge5 with SAYC
+# NS and EW play the same system
 NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
@@ -29,17 +29,21 @@ search_threshold = 0.001
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.95
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 6
-# Disabling simulation for opening bid
+eval_after_bid_count = 3
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dumme
-use_probability = True
+use_probability = False
 # Before the final pass validate the contract with a neural network
-check_final_contract = True
+check_final_contract = False
 # How many samples checked
 max_samples_checked = 20
 # Minimum gain for making a rescue bid
@@ -51,7 +55,7 @@ alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
-use_adjustment = False
+use_adjustment = True
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
@@ -86,7 +90,7 @@ double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
 min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = 24
+lead_from_pips_nt = attitude
 lead_from_pips_suit = 135
 
 [eval]
@@ -124,6 +128,11 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
 use_suitc = False
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -147,6 +156,8 @@ pimc_max_threads = -1
 pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = False
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
