--- a/scripts/match/bidding/default_nosearch.conf
+++ b/scripts/match/bidding/default_nosearch.conf
@@ -26,7 +26,7 @@ search_threshold = -1
 no_search_threshold = 0.999
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
-# Disabling simulation for opening bid
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
@@ -43,7 +43,7 @@ min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
