--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,5 +1,5 @@
 [models]
-name = GIB
+name = default
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
@@ -10,9 +10,9 @@ NS = -1
 EW = -1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-# Use SAYC in BBA
-bba_ns = -1
-bba_ew = -1
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 
@@ -25,15 +25,19 @@ info = models/GIB/binfo_V2-3130000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.999
+no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
-# Disabling simulation for opening bid
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dumme
 use_probability = True
 # Before the final pass validate the contract with a neural network
@@ -45,7 +49,7 @@ min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
@@ -54,7 +58,7 @@ use_adjustment = True
 # The score from NN is multiplied to this and added to expected score
 adjust_NN = 50
 # If it was difficult to find samples we increase the trust in the NN
-adjust_NN_Few_Samples = 500
+adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
@@ -111,7 +115,7 @@ decl_suit = models/playing/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -121,7 +125,12 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
-use_suitc = False
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -130,8 +139,8 @@ pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in
-pimc_start_trick_declarer = 4
-pimc_start_trick_defender = 8
+pimc_start_trick_declarer = 3
+pimc_start_trick_defender = 6
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -145,6 +154,8 @@ pimc_max_threads = -1
 pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
@@ -162,7 +173,7 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.10
+bid_accept_play_threshold = 0.07
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
@@ -173,7 +184,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
@@ -183,4 +194,4 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.001
+exclude_samples = 0.07
