--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -1,6 +1,7 @@
 [models]
+# Default for API
 name = GIB 2/1
-api = true
+api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
@@ -22,7 +23,6 @@ contract = models/contract/contract-193200
 
 [bidding]
 bidder = models/GIB/bidding_V2-3130000
-#bidder = scripts/training/bidding/model/bidding_V2-177000
 info = models/GIB/binfo_V2-3130000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
@@ -30,12 +30,16 @@ search_threshold = 0.07
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
 eval_after_bid_count = 12
-# Disabling simulation for opening bid
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dumme
 use_probability = True
 # Before the final pass validate the contract with a neural network
@@ -47,7 +51,7 @@ min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
 max_estimated_score = 300
 # Alert implemented in bidding model
-alert_supported = False
+alert_supported = True
 
 [adjustments]
 # Are adjustments enabled
@@ -124,6 +128,11 @@ use_biddinginfo = True
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
 use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
@@ -147,6 +156,8 @@ pimc_max_threads = -1
 pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
