--- a/src/config/muppet.conf
+++ b/src/config/muppet.conf
@@ -27,23 +27,27 @@ search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
-eval_after_bid_count = 12
-# Disabling simulation for opening bid
+eval_after_bid_count = 10
+# If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
 use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dumme
 use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
 # How many samples checked
-max_samples_checked = 20
+max_samples_checked = 30
 # Minimum gain for making a rescue bid
-min_rescue_reward = 250
+min_rescue_reward = 200
 # Max expected score to evaluate rescue bid
-max_estimated_score = 300
+max_estimated_score = 700
 # Alert implemented in bidding model
 alert_supported = False
 
@@ -52,7 +56,7 @@ alert_supported = False
 use_adjustment = True
 # Add extra weigth on scores from neural network
 # The score from NN is multiplied to this and added to expected score
-adjust_NN = 0
+adjust_NN = 60
 # If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 500
 # subtract this from expected score before XX (Double if vulnerable)
@@ -109,11 +113,11 @@ dummy_suit = models/playing/dummy_suit-999000
 righty_suit = models/playing/righty_suit-999000
 decl_suit = models/playing/decl_suit-999000
 # Number of samples when playing the hand
-sample_hands_play = 200
+sample_hands_play = 300
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 30
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 5000
+sample_boards_for_play = 4500
 # Should possible claim be calculated
 claim = True
 # Use bidding info during play
@@ -121,40 +125,47 @@ use_biddinginfo = True
 # Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 # Use SuitC to find the card for single suit combinations
-use_suitc = False
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
 
 [pimc]
 # Are we using PIMC as declarer or defender? 
 pimc_use_declaring = True
 pimc_use_defending = True
 # Max wait time for results from PIMC in seconds
-pimc_wait = 3
+pimc_wait = 5
 # When should PIMC kick in
-pimc_start_trick_declarer = 4
-pimc_start_trick_defender = 8
+pimc_start_trick_declarer = 2
+pimc_start_trick_defender = 5
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
 # The API is stateless and will establish constraints at each trick
 pimc_constraints_each_trick = False
 # Stop evaluation after finding the number of playouts unles pimc_wait expires before
-pimc_max_playouts = 10000
+pimc_max_playouts = 8000
 # Max number of threads PIMC is allowed to use
 pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.00
+pimc_trust_NN = 0.02
+# Combine with BEN double dummy
+pimc_ben_dd = False
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.05
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
-#use_distance = False
+#use_distance = True
 #bidding_threshold_sampling = 0.25
 #bid_accept_threshold_bidding = 0.20
 # This is calculated using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
@@ -162,25 +173,25 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.10
+bid_accept_play_threshold = 0.13
 
 # Filter to remove hands, where the play is inconsistent with the sample
-play_accept_threshold = 0.03
+play_accept_threshold = 0.05
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.01
+bid_extend_play_threshold = 0.05
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 50000
+sample_boards_for_auction_opening_lead = 40000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 250
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.001
+exclude_samples = 0.01
