Added option for not generating samples, when no search

--- a/src/config/speed.conf
+++ b/src/config/speed.conf
@@ -95,6 +95,7 @@ no_lead_single_dummy = models/single_dummy/single_dummy-32768000
 # Include opening lead, when making single dummy estimates
 lead_included = False
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
+# This is not used if search_threshold = -1
 double_dummy_eval = True
 
 [cardplay]
@@ -147,6 +148,8 @@ pimc_autoplaysingleton = True
 pimc_trust_NN = 0.00
 
 [sampling]
+# If bid selected directly by Neural net, then save time dropping generating samples
+no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
