--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -1,7 +1,7 @@
 [models]
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
-model_version = 2
+model_version = 3
 api = True
 # Version of tensorflow to use
 tf_version = 2
@@ -15,15 +15,17 @@ bba_ns = 1
 bba_ew = 1
 
 [contract]
-contract = models/contract/contract-193200
+contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = scripts/training/bidding/model/bidding.h5
-info = models/TF2 models/binfo.h5
+bidder = models/TF2models/GIB_2024-07-09-E20.keras
+info = models/TF2models/GIB-Info_2024-07-09-E10.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
+# Alert implemented in bidding model
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
@@ -50,8 +52,8 @@ adjust_min1_by = 200
 adjust_min2_by = 200
 
 [lead]
-lead_suit = models/TF2 models/lead.h5
-lead_nt = models/TF2 models/lead.h5
+lead_suit = models/TF2models/Lead-Suit_2024-07-08-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-08-E20.keras
 lead_threshold = 0.05
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
@@ -64,8 +66,8 @@ lead_from_pips_nt = random
 lead_from_pips_suit = random
 
 [eval]
-lead_single_dummy = models/TF2 models/single_dummy.h5
-no_lead_single_dummy = models/TF2 models/single_dummy.h5
+lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
 # Include opening lead, when making single dummy estimates
 lead_included = False
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
@@ -73,14 +75,14 @@ double_dummy_eval = False
 
 [cardplay]
 opening_lead_included = True
-lefty_nt = models/TF2 models/lefty.h5
-dummy_nt = models/TF2 models/dummy.h5
-righty_nt = models/TF2 models/righty.h5
-decl_nt = models/TF2 models/decl.h5
-lefty_suit = models/TF2 models/lefty.h5
-dummy_suit = models/TF2 models/dummy.h5
-righty_suit = models/TF2 models/righty.h5
-decl_suit = models/TF2 models/decl.h5
+lefty_nt = models/TF2models/lefty_nt_2024-07-08-E20.keras
+dummy_nt = models/TF2models/dummy_nt_2024-07-08-E20.keras
+righty_nt = models/TF2models/righty_nt_2024-07-08-E20.keras
+decl_nt = models/TF2models/decl_nt_2024-07-08-E20.keras
+lefty_suit = models/TF2models/lefty_suit_2024-07-08-E20.keras
+dummy_suit = models/TF2models/dummy_suit_2024-07-08-E20.keras
+righty_suit = models/TF2models/righty_suit_2024-07-08-E20.keras
+decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
