--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -1,45 +1,160 @@
 [models]
-model_version = 0
+name = default (GIB)
+# Model version 1 drops state for bidding, and introduce different system for NS and EW
+# Model version 2 includes 4 bids when making the lookup
+model_version = 3
+api = True
+# Version of tensorflow to use
 tf_version = 2
+# NS is SAYC and EW is WBridge5 with SAYC
+NS = -1
+EW = -1
+# If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
+use_bba = False
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
+# Playing matchpoint? Otherwise it is teams
+matchpoint = False
 
 [contract]
-contract = models/contract/contract-193200
+contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/bidding.h5
-info = models/binfo.h5
-search_threshold = -1
+bidder = models/TF2models/GIB_2024-07-09-E20.keras
+info = models/TF2models/GIB-Info_2024-07-09-E10.keras
+# If there are multiple bids over this threshold make a simulation for the bids
+search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
-no_search_threshold = 0.999
+no_search_threshold = 1
+# Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
+eval_after_bid_count = 12
+# If False the opening bid will be without simulation, even with multiple canddates
+eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
+# Minimum number of candidates examined in the passout situation
+min_passout_candidates = 2
+# Use bidding quality in evaluation (if not good just use neural network)
+use_biddingquality = True
+# For very long bidding sequnces we can't find decent samples, so do not make quality check
+no_biddingquality_after_bid_count = 12
+# Upvote the samples that matches the bidding best - used when double dumme
+use_probability = True
+# Before the final pass validate the contract with a neural network
+check_final_contract = True
+# How many samples checked
+max_samples_checked = 20
+# Minimum gain for making a rescue bid
+min_rescue_reward = 250
+# Max expected score to evaluate rescue bid
+max_estimated_score = 300
+# Alert implemented in bidding model
+alert_supported = True
+
+[adjustments]
+# Are adjustments enabled
+use_adjustment = True
+# Add extra weigth on scores from neural network
+# The score from NN is multiplied to this and added to expected score
+adjust_NN = 50
+# If it was difficult to find samples we increase the trust in the NN
+adjust_NN_Few_Samples = 100
+# subtract this from expected score before XX (Double if vulnerable)
+adjust_XX = 200
+# Subtract this from expected score before double in passout situation
+# If not going 2 down, the udjustment is doubled
+adjust_X = 100
+# When bidding in the passout situation, we change the expected score
+adjust_passout = -100
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
+adjust_passout_negative = 3
+# If we get some very low scores from the NN, then adjust by this
+# Both will be tested, so a very low score will get both adjustments
+adjust_min1 = 0.002
+adjust_min2 = 0.0002
+adjust_min1_by = 200
+adjust_min2_by = 200
 
 [lead]
-lead_suit = models/lead.h5
-lead_nt = models/lead.h5
-lead_threshold = 0.05
+# Neural network for suggesting opening lead
+lead_suit = models/TF2models/Lead-Suit_2024-07-08-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-08-E20.keras
+# Ignore cards as opening lead below this value from the neural network
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
+# Use double dummy statistics when evaluating the opening lead - default is single dummy
+double_dummy = True
+# Force a minimum number of leads to consider - overrides lead_threshold
+min_opening_leads = 4
+# Opening lead agreement (random, attitude, 135 or 24)
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
-lead_single_dummy = models/single_dummy.h5
+lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
+# Include opening lead, when making single dummy estimates
+lead_included = False
+# Use double dummy when estimating tricks during bidding - to slow if 200 samples
+double_dummy_eval = True
 
 [cardplay]
+# This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = True
-lefty_nt = models/lefty.h5
-dummy_nt = models/dummy.h5
-righty_nt = models/righty.h5
-decl_nt = models/decl.h5
-lefty_suit = models/lefty.h5
-dummy_suit = models/dummy.h5
-righty_suit = models/righty.h5
-decl_suit = models/decl.h5
+lefty_nt = models/TF2models/lefty_nt_2024-07-08-E20.keras
+dummy_nt = models/TF2models/dummy_nt_2024-07-08-E20.keras
+righty_nt = models/TF2models/righty_nt_2024-07-08-E20.keras
+decl_nt = models/TF2models/decl_nt_2024-07-08-E20.keras
+lefty_suit = models/TF2models/lefty_suit_2024-07-08-E20.keras
+dummy_suit = models/TF2models/dummy_suit_2024-07-08-E20.keras
+righty_suit = models/TF2models/righty_suit_2024-07-08-E20.keras
+decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
-sample_hands_play = 100
+sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 10
+min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
-claim = False
+claim = True
+# Use bidding info during play
+use_biddinginfo = True
+# Use bidding quality in evaluation, if bad samples, just use neural network
+use_biddingquality_in_eval = True
+# Use SuitC to find the card for single suit combinations
+use_suitc = True
+# Only check trump in suit contracts (and all suits in NT)
+suitc_sidesuit_check = False
+# Drawing trump, reward is given if opponents has trump penalty if not
+draw_trump_reward = 0.25
+draw_trump_penalty = 0.25
+
+[pimc]
+# Are we using PIMC as declarer or defender? 
+pimc_use_declaring = True
+pimc_use_defending = True
+# Max wait time for results from PIMC in seconds
+pimc_wait = 3
+# When should PIMC kick in
+pimc_start_trick_declarer = 3
+pimc_start_trick_defender = 6
+# Extract hcp from samples and use as input to PIMC
+pimc_constraints = True
+# On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
+# The API is stateless and will establish constraints at each trick
+pimc_constraints_each_trick = False
+# Stop evaluation after finding the number of playouts unles pimc_wait expires before
+pimc_max_playouts = 10000
+# Max number of threads PIMC is allowed to use
+pimc_max_threads = -1
+# If singleton, just play it without evaluating it
+pimc_autoplaysingleton = True
+# PIMC trust NN
+pimc_trust_NN = 0.00
+# Combine with BEN double dummy
+pimc_ben_dd = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
@@ -57,7 +172,7 @@ use_distance = True
 bidding_threshold_sampling = 0.70
 bid_accept_threshold_bidding = 0.40
 # Filter to remove hands not consistent with the bidding. Used during play
-bid_accept_play_threshold = 0.10
+bid_accept_play_threshold = 0.07
 
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
@@ -68,7 +183,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
@@ -77,3 +192,5 @@ sample_boards_for_auction_opening_lead = 50000
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
+# If probability for a bid is below this, then drop the sample
+exclude_samples = 0.07
