--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -7,8 +7,8 @@ api = True
 # Version of tensorflow to use
 tf_version = 2
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = -1
-EW = -1
+NS = 0
+EW = 0
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use 2/1 in BBA
@@ -22,7 +22,8 @@ contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
 bidder = models/TF2models/GIB_2024-07-11-E20.keras
-info = models/TF2models/GIB-Info_2024-07-09-E10.keras
+opponent = models/TF2models/GIB_2024-07-11-E20.keras
+info = models/TF2models/GIB-Info_2024-07-14-E08.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -78,8 +79,8 @@ adjust_min2_by = 200
 
 [lead]
 # Neural network for suggesting opening lead
-lead_suit = models/TF2models/Lead-Suit_2024-07-08-E20.keras
-lead_nt = models/TF2models/Lead-NT_2024-07-08-E20.keras
+lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
 # Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
@@ -187,7 +188,7 @@ min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 50000
+sample_boards_for_auction_opening_lead = 10000
 # Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
