--- a/scripts/training/bidding/default_tf2.conf
+++ b/scripts/training/bidding/default_tf2.conf
@@ -6,8 +6,8 @@ api = True
 # Version of tensorflow to use
 tf_version = 2
 # NS is SAYC and EW is WBridge5 with SAYC
-NS = -1
-EW = -1
+NS = 0
+EW = 0
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 # Use SAYC in BBA
@@ -19,7 +19,7 @@ contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
 bidder = models/TF2models/GIB_2024-07-11-E20.keras
-info = models/TF2models/GIB-Info_2024-07-09-E10.keras
+info = models/TF2models/GIB-Info_2024-07-14-E08.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -52,18 +52,20 @@ adjust_min1_by = 200
 adjust_min2_by = 200
 
 [lead]
-lead_suit = models/TF2models/Lead-Suit_2024-07-08-E20.keras
-lead_nt = models/TF2models/Lead-NT_2024-07-08-E20.keras
-lead_threshold = 0.05
+# Neural network for suggesting opening lead
+lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
+# Ignore cards as opening lead below this value from the neural network
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
 # Use double dummy statistics when evaluating the opening lead - default is single dummy
 double_dummy = True
 # Force a minimum number of leads to consider - overrides lead_threshold
-min_opening_leads = 3
+min_opening_leads = 4
 # Opening lead agreement (random, attitude, 135 or 24)
-lead_from_pips_nt = random
-lead_from_pips_suit = random
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
 lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
