--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -1,43 +1,96 @@
 [models]
-model_version = 0
+# Model version 1 drops state for bidding, and introduce different system for NS and EW
+# Model version 2 includes 4 bids when making the lookup
+model_version = 3
+api = True
+# Version of tensorflow to use
 tf_version = 2
+# NS is SAYC and EW is WBridge5 with SAYC
+NS = 0
+EW = 0
+# If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
+use_bba = False
+# Use SAYC in BBA
+bba_ns = 1
+bba_ew = 1
 
 [contract]
-contract = models/contract/contract-193200
+contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/bidding.h5
-info = models/binfo.h5
-search_threshold = 0.1
+bidder = models/TF2models/GIB_2024-07-11-E20.keras
+info = models/TF2models/GIB-Info_2024-07-14-E08.keras
+# If there are multiple bids over this threshold make a simulation for the bids
+search_threshold = -1
+# If there is bid above this threshold, make that bid ignoring other bids
+no_search_threshold = 0.999
+# Alert implemented in bidding model
+alert_supported = False
+
+[adjustments]
+# Are adjustments enabled
+use_adjustment = True
+# Add extra weigth on scores from neural network
+# The score from NN is multiplied to this and added to expected score
+adjust_NN = 50
+# If it was difficult to find samples we increase the trust in the NN
+adjust_NN_Few_Samples = 500
+# subtract this from expected score before XX (Double if vulnerable)
+adjust_XX = 200
+# Subtract this from expected score before double in passout situation
+# If not going 2 down, the udjustment is doubled
+adjust_X = 100
+# When bidding in the passout situation, we change the expected score
+adjust_passout = -100
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
+adjust_passout_negative = 3
+# If we get some very low scores from the NN, then adjust by this
+# Both will be tested, so a very low score will get both adjustments
+adjust_min1 = 0.002
+adjust_min2 = 0.0002
+adjust_min1_by = 200
+adjust_min2_by = 200
 
 [lead]
-lead_suit = models/lead.h5
-lead_nt = models/lead.h5
-lead_threshold = 0.05
+# Neural network for suggesting opening lead
+lead_suit = models/TF2models/Lead-Suit_2024-07-13-E20.keras
+lead_nt = models/TF2models/Lead-NT_2024-07-13-E20.keras
+# Ignore cards as opening lead below this value from the neural network
+lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
-lead_accept_nn = 0.99
+lead_accept_nn = 0.999
+# Use double dummy statistics when evaluating the opening lead - default is single dummy
+double_dummy = True
+# Force a minimum number of leads to consider - overrides lead_threshold
+min_opening_leads = 4
+# Opening lead agreement (random, attitude, 135 or 24)
+lead_from_pips_nt = 24
+lead_from_pips_suit = 135
 
 [eval]
-lead_single_dummy = models/single_dummy.h5
-no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
+lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
+# Include opening lead, when making single dummy estimates
 lead_included = False
+# Use double dummy when estimating tricks during bidding - to slow if 200 samples
+double_dummy_eval = False
 
 [cardplay]
 opening_lead_included = True
-lefty_nt = models/lefty.h5
-dummy_nt = models/dummy.h5
-righty_nt = models/righty.h5
-decl_nt = models/decl.h5
-lefty_suit = models/lefty.h5
-dummy_suit = models/dummy.h5
-righty_suit = models/righty.h5
-decl_suit = models/decl.h5
+lefty_nt = models/TF2models/lefty_nt_2024-07-08-E20.keras
+dummy_nt = models/TF2models/dummy_nt_2024-07-08-E20.keras
+righty_nt = models/TF2models/righty_nt_2024-07-08-E20.keras
+decl_nt = models/TF2models/decl_nt_2024-07-08-E20.keras
+lefty_suit = models/TF2models/lefty_suit_2024-07-08-E20.keras
+dummy_suit = models/TF2models/dummy_suit_2024-07-08-E20.keras
+righty_suit = models/TF2models/righty_suit_2024-07-08-E20.keras
+decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 # Number of samples when playing the hand
-sample_hands_play = 100
+sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
 # Number of samples we will generate to find sample_hands_play
-sample_boards_for_play = 5000
+sample_boards_for_play = 1000
 # Should possible claim be calculated
 claim = False
 
