New model for GIB and some minor fixes

--- a/src/config/BBA-2over1.conf
+++ b/src/config/BBA-2over1.conf
@@ -62,7 +62,7 @@ adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
