--- a/src/config/GIB-2024.04.24.conf
+++ b/src/config/GIB-2024.04.24.conf
@@ -1,8 +1,9 @@
 [models]
 name = GIB
-api = True
+
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
+
 model_version = 2
 # Version of tensorflow to use
 tf_version = 1
@@ -45,7 +46,7 @@ adjust_NN_Few_Samples = 500
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
@@ -158,7 +159,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
