--- a/UCBC 2024/MvsM/Shark.conf
+++ b/UCBC 2024/MvsM/Shark.conf
@@ -1,7 +1,6 @@
 [models]
 # BEN EW
 name = Shark (SAYC)
-api = true
 
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
@@ -61,7 +60,7 @@ adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
