--- a/scripts/match/bidding/default_noadjust.conf
+++ b/scripts/match/bidding/default_noadjust.conf
@@ -56,7 +56,7 @@ adjust_NN_Few_Samples = 500
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
@@ -110,6 +110,8 @@ decl_suit = models/playing/decl_suit-999000
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -169,7 +171,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
