--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -1,8 +1,9 @@
 [models]
+name = TF2 default
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
-api = True
+
 # Version of tensorflow to use
 tf_version = 2
 # NS is SAYC and EW is WBridge5 with SAYC
@@ -18,7 +19,7 @@ bba_ew = 1
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-15-E14.keras
+bidder = models/TF2models/GIB_2024-07-15-E25.keras
 info = models/TF2models/GIB-Info_2024-07-15-E25.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
@@ -38,7 +39,7 @@ adjust_NN_Few_Samples = 500
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
@@ -89,6 +90,8 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
@@ -121,7 +124,7 @@ sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction
 sample_boards_for_auction = 5000
 # Minimum number of hands when caclulating scores in the bidding
-min_sample_hands_auction = 10
+min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
