--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -3,7 +3,7 @@ name = default (GIB)
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
-api = True
+
 # Version of tensorflow to use
 tf_version = 2
 # NS is SAYC and EW is WBridge5 with SAYC
@@ -21,8 +21,8 @@ matchpoint = False
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-15-E14.keras
-opponent = models/TF2models/GIB_2024-07-15-E14.keras
+bidder = models/TF2models/GIB_2024-07-17-E25.keras
+opponent = models/TF2models/GIB_2024-07-17-E25.keras
 info = models/TF2models/GIB-Info_2024-07-15-E25.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
@@ -64,7 +64,7 @@ adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
 # Subtract this from expected score before double in passout situation
-# If not going 2 down, the udjustment is doubled
+# If not going 2 down, the adjustment is doubled
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
@@ -116,6 +116,8 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 20
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 10
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -188,10 +190,10 @@ min_sample_hands_auction = 20
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 10000
+sample_boards_for_auction_opening_lead = 20000
 # Number of samples made, when finding the opening lead
 sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.07
+exclude_samples = 0.01
