New GIB model and configuration update

--- a/scripts/match/bidding/speed.conf
+++ b/scripts/match/bidding/speed.conf
@@ -11,15 +11,16 @@ NS = 0
 EW = 0
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-# Use SAYC in BBA
-bba_ns = 1
-bba_ew = 1
+# Use 2/1 in BBA
+bba_ns = 0
+bba_ew = 0
 
 [contract]
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-18-E50.keras
+bidder = models/TF2models/GIB_2024-07-19-E100.keras
+opponent = models/TF2models/GIB_2024-07-19-E100.keras
 info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
