--- a/scripts/training/bidding_info/default_tf2.conf
+++ b/scripts/training/bidding_info/default_tf2.conf
@@ -19,7 +19,8 @@ bba_ew = 1
 contract = models/TF2models/Contract_2024-07-10-E20.keras
 
 [bidding]
-bidder = models/TF2models/GIB_2024-07-18-E50.keras
+bidder = models/TF2models/GIB_2024-07-19-E100.keras
+opponent = models/TF2models/GIB_2024-07-19-E100.keras
 info = models/TF2models/GIB-Info_2024-07-18-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
