--- a/src/config/BBA-2over1.conf
+++ b/src/config/BBA-2over1.conf
@@ -115,7 +115,9 @@ decl_suit = models/playing/decl_suit-999000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play = 20
+min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
