PIMC update and updated model for Jackos

--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -157,9 +157,11 @@ pimc_max_threads = -1
 # If singleton, just play it without evaluating it
 pimc_autoplaysingleton = True
 # PIMC trust NN
-pimc_trust_NN = 0.00
+pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
 pimc_ben_dd = True
+# Use a priori probabilities
+pimc_apriori_probability = False
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
