Config update and some extra boards

--- a/src/config/GIB.conf
+++ b/src/config/GIB.conf
@@ -28,6 +28,8 @@ no_search_threshold = 1
 eval_after_bid_count = -1
 # If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -107,6 +109,8 @@ decl_suit = models/playing/decl_suit-999000
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
@@ -142,7 +146,7 @@ pimc_trust_NN = 0.00
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.03
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
