--- a/src/config/muppet.conf
+++ b/src/config/muppet.conf
@@ -3,6 +3,7 @@ name = Jackos
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
+
 # Version of tensorflow to use
 tf_version = 1
 # NS and EW play the same system
@@ -116,6 +117,8 @@ decl_suit = models/playing/decl_suit-999000
 sample_hands_play = 300
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 30
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 4500
 # Should possible claim be calculated
