--- a/UCBC 2024/MvsM/SAYC.conf
+++ b/UCBC 2024/MvsM/SAYC.conf
@@ -32,6 +32,8 @@ no_search_threshold = 0.999
 eval_after_bid_count = 12
 # If False the opening bid will be without simulation, even with multiple canddates
 eval_opening_bid = False
+# Add Pass as a bid to evaluate after this number of bids
+eval_pass_after_bid_count = 12
 # Minimum number of candidates examined in the passout situation
 min_passout_candidates = 2
 # Use bidding quality in evaluation (if not good just use neural network)
@@ -160,7 +162,7 @@ pimc_ben_dd = False
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.03
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
