--- a/scripts/match/bidding/speed.conf
+++ b/scripts/match/bidding/speed.conf
@@ -91,6 +91,8 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 1000
 # Should possible claim be calculated
@@ -101,7 +103,7 @@ claim = False
 no_samples_when_no_search = True
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.03
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
