--- a/src/config/BBA-SAYC.conf
+++ b/src/config/BBA-SAYC.conf
@@ -158,11 +158,13 @@ pimc_autoplaysingleton = True
 pimc_trust_NN = 0.00
 # Combine with BEN double dummy
 pimc_ben_dd = True
+# Use a priori probabilities
+pimc_apriori_probability = True
 
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.03
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
