--- a/src/config/BigBen.conf
+++ b/src/config/BigBen.conf
@@ -96,6 +96,8 @@ decl_suit = models/decl_model/decl-1000000
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 10
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -131,7 +133,7 @@ pimc_trust_NN = 0.00
 [sampling]
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # Can be disabled by setting it to zero
-lead_accept_threshold = 0.01
+lead_accept_threshold = 0.03
 # If we play with our normal partner we can add som trust to the lead
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.05
