--- a/src/config/jacksayc.conf
+++ b/src/config/jacksayc.conf
@@ -21,7 +21,7 @@ contract = models/contract/contract-193200
 
 [bidding]
 bidder = models/muppet/bidding_V2-1200000
-info = models/muppet/binfo_V2-430000
+info = models/muppet/binfo_V2-1128000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
@@ -116,6 +116,8 @@ decl_suit = models/playing/decl_suit-999000
 sample_hands_play = 300
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 30
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 4500
 # Should possible claim be calculated
