--- a/src/config/muppet_TF2.conf
+++ b/src/config/muppet_TF2.conf
@@ -118,6 +118,8 @@ decl_suit = models/TF2models/decl_suit_2024-07-08-E20.keras
 sample_hands_play = 300
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 30
+# Minimum number of boards we want returned for sampling during play
+min_sample_hands_play_bad = 8
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 4500
 # Should possible claim be calculated
