Added Jackos TF2 on server

--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -159,7 +159,7 @@ pimc_autoplaysingleton = True
 # PIMC trust NN
 pimc_trust_NN = 0.00 
 # Combine with BEN double dummy
-pimc_ben_dd = True
+pimc_ben_dd = False
 # Use a priori probabilities
 pimc_apriori_probability = True
 
